--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   intl: ^0.16.0
   cupertino_icons: ^1.0.0
   simple_animations: ^2.5.1
+  assets_audio_player: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -20,7 +21,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # assets:
+  assets:
+    - assets/audio/music1.mp3
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
