--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   cupertino_icons: ^1.0.0
   simple_animations: ^2.5.1
   assets_audio_player: ^2.0.15
+  shared_preferences: ^0.5.12+4
+  get_storage: ^1.3.2
+  get:
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +26,8 @@ flutter:
 
   assets:
     - assets/audio/music1.mp3
+    - assets/audio/breakstart.mp3
+    - assets/audio/focusstart.mp3
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
