--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,16 +16,24 @@ dependencies:
   shared_preferences: ^0.5.12+4
   get_storage: ^1.3.2
   get:
+  just_audio: ^0.6.15+1
+  
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.8.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/LOGO.png"
 
 flutter:
   uses-material-design: true
 
   assets:
-    - assets/audio/music1.mp3
     - assets/audio/breakstart.mp3
     - assets/audio/focusstart.mp3
   #   - images/a_dot_burr.jpeg
