--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,21 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.16.0
-  cupertino_icons: ^1.0.0
-  simple_animations: ^2.5.1
-  assets_audio_player: ^2.0.15
-  shared_preferences: ^0.5.12+4
-  get_storage: ^1.3.2
-  get:
-  just_audio: ^0.6.15+1
+  intl: ^0.17.0
+  cupertino_icons: ^1.0.2
+  simple_animations: ^3.0.3
+  assets_audio_player: ^3.0.3+2
+  shared_preferences: ^2.0.5
+  get_storage: ^2.0.2
+  get: ^4.1.2
+  just_audio: ^0.7.3
   
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.8.1
+  flutter_launcher_icons: ^0.9.0
 
 flutter_icons:
   android: true
