--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,6 +53,9 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    packagingOptions {
+    exclude 'META-INF/services/javax.annotation.processing.Processor'
+    }
 }
 
 flutter {
